gen/grammar/SL_GrammarParser.java
// Generated from G:/My Drive/DIEGO/Universidad/9 - NovenoSemestre/Lenguajes de Programación/Translator/src/grammar\SL_Grammar.g4 by ANTLR 4.10.1
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SL_GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		COMMENT=32, LINE_COMMENT=33, WS=34, ID=35, TK_NUMERO=36, TK_CADENA=37, 
		TK_ASIGNACION=38, TK_DOS_PUNTOS=39, TK_SUMA=40, TK_RESTA=41, TK_COMA=42, 
		TK_PUNTO_Y_COMA=43, TK_PUNTO=44, TK_LLAVE_IZQUIERDA=45, TK_LLAVE_DERECHA=46, 
		TK_CORCHETE_IZQUIERDO=47, TK_CORCHETE_DERECHO=48, TK_PARENTESIS_IZQUIERDO=49, 
		TK_PARENTESIS_DERECHO=50, TK_MODULO=51, TK_MULTIPLICACION=52, TK_POTENCIACION=53, 
		TK_DIVISION=54, TK_IGUAL_QUE=55, TK_MENOR=56, TK_DISTINTO_DE=57, TK_MENOR_IGUAL=58, 
		TK_MAYOR=59, TK_MAYOR_IGUAL=60;
	public static final int
		RULE_codigo = 0, RULE_nombre = 1, RULE_declaracion = 2, RULE_declaracion_contenido_const = 3, 
		RULE_declaracion_contenido_tipos = 4, RULE_declaracion_contenido_var = 5, 
		RULE_valor = 6, RULE_valor_aux = 7, RULE_variable = 8, RULE_variable_aux = 9, 
		RULE_signo = 10, RULE_otros_id = 11, RULE_tipo_dato = 12, RULE_tamano_arreglo = 13, 
		RULE_mas_tamano_arreglo = 14, RULE_mas_declaraciones_var = 15, RULE_mas_declaraciones_tipos = 16, 
		RULE_mas_declaraciones_const = 17, RULE_main = 18, RULE_main_subrutina = 19, 
		RULE_sentencias = 20, RULE_sentencia = 21, RULE_sentencias_internas = 22, 
		RULE_sentencia_interna = 23, RULE_id_casos = 24, RULE_punto_y_coma_opcional = 25, 
		RULE_expresion = 26, RULE_expresion_aux = 27, RULE_valores_vector = 28, 
		RULE_posibles_valores_vector = 29, RULE_mas_valores_vector = 30, RULE_id_arreglo_registro = 31, 
		RULE_mas_pos_valor = 32, RULE_operador = 33, RULE_asignacion = 34, RULE_condicional = 35, 
		RULE_mas_condicionales = 36, RULE_condicional_ = 37, RULE_ciclo_mientras = 38, 
		RULE_sentencia_eval = 39, RULE_mas_casos_eval = 40, RULE_ciclo_desde = 41, 
		RULE_paso_opt = 42, RULE_llamada_subrutina = 43, RULE_parametros = 44, 
		RULE_mas_parametros = 45, RULE_sentencia_retorna_subrutina = 46, RULE_sentencia_retorna_main = 47, 
		RULE_valor_retorno = 48, RULE_ciclo_repetir = 49, RULE_subrutina_ = 50, 
		RULE_param_subrutina = 51, RULE_mas_param_subrutina = 52, RULE_punto_y_coma_opcional_subrutina = 53, 
		RULE_param_ref = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"codigo", "nombre", "declaracion", "declaracion_contenido_const", "declaracion_contenido_tipos", 
			"declaracion_contenido_var", "valor", "valor_aux", "variable", "variable_aux", 
			"signo", "otros_id", "tipo_dato", "tamano_arreglo", "mas_tamano_arreglo", 
			"mas_declaraciones_var", "mas_declaraciones_tipos", "mas_declaraciones_const", 
			"main", "main_subrutina", "sentencias", "sentencia", "sentencias_internas", 
			"sentencia_interna", "id_casos", "punto_y_coma_opcional", "expresion", 
			"expresion_aux", "valores_vector", "posibles_valores_vector", "mas_valores_vector", 
			"id_arreglo_registro", "mas_pos_valor", "operador", "asignacion", "condicional", 
			"mas_condicionales", "condicional_", "ciclo_mientras", "sentencia_eval", 
			"mas_casos_eval", "ciclo_desde", "paso_opt", "llamada_subrutina", "parametros", 
			"mas_parametros", "sentencia_retorna_subrutina", "sentencia_retorna_main", 
			"valor_retorno", "ciclo_repetir", "subrutina_", "param_subrutina", "mas_param_subrutina", 
			"punto_y_coma_opcional_subrutina", "param_ref"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'var'", "'tipos'", "'const'", "'TRUE'", "'FALSE'", 
			"'SI'", "'NO'", "'cadena'", "'logico'", "'numerico'", "'registro'", "'vector'", 
			"'matriz'", "'inicio'", "'fin'", "'not'", "'and'", "'or'", "'si'", "'sino'", 
			"'mientras'", "'eval'", "'caso'", "'desde'", "'hasta'", "'paso'", "'retorna'", 
			"'repetir'", "'subrutina'", "'ref'", null, null, null, null, null, null, 
			"'='", "':'", "'+'", "'-'", "','", "';'", "'.'", "'{'", "'}'", "'['", 
			"']'", "'('", "')'", "'%'", "'*'", "'^'", "'/'", "'=='", "'<'", "'<>'", 
			"'<='", "'>'", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "COMMENT", "LINE_COMMENT", 
			"WS", "ID", "TK_NUMERO", "TK_CADENA", "TK_ASIGNACION", "TK_DOS_PUNTOS", 
			"TK_SUMA", "TK_RESTA", "TK_COMA", "TK_PUNTO_Y_COMA", "TK_PUNTO", "TK_LLAVE_IZQUIERDA", 
			"TK_LLAVE_DERECHA", "TK_CORCHETE_IZQUIERDO", "TK_CORCHETE_DERECHO", "TK_PARENTESIS_IZQUIERDO", 
			"TK_PARENTESIS_DERECHO", "TK_MODULO", "TK_MULTIPLICACION", "TK_POTENCIACION", 
			"TK_DIVISION", "TK_IGUAL_QUE", "TK_MENOR", "TK_DISTINTO_DE", "TK_MENOR_IGUAL", 
			"TK_MAYOR", "TK_MAYOR_IGUAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SL_Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SL_GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CodigoContext extends ParserRuleContext {
		public NombreContext nombre() {
			return getRuleContext(NombreContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public Subrutina_Context subrutina_() {
			return getRuleContext(Subrutina_Context.class,0);
		}
		public TerminalNode EOF() { return getToken(SL_GrammarParser.EOF, 0); }
		public CodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codigo; }
	}

	public final CodigoContext codigo() throws RecognitionException {
		CodigoContext _localctx = new CodigoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_codigo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			nombre();
			setState(111);
			declaracion();
			setState(112);
			main();
			setState(113);
			subrutina_();
			setState(114);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NombreContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SL_GrammarParser.ID, 0); }
		public NombreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombre; }
	}

	public final NombreContext nombre() throws RecognitionException {
		NombreContext _localctx = new NombreContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nombre);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(T__0);
				setState(117);
				match(ID);
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public Declaracion_contenido_varContext declaracion_contenido_var() {
			return getRuleContext(Declaracion_contenido_varContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public Declaracion_contenido_tiposContext declaracion_contenido_tipos() {
			return getRuleContext(Declaracion_contenido_tiposContext.class,0);
		}
		public Declaracion_contenido_constContext declaracion_contenido_const() {
			return getRuleContext(Declaracion_contenido_constContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(T__1);
				setState(122);
				declaracion_contenido_var();
				setState(123);
				declaracion();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				match(T__2);
				setState(126);
				declaracion_contenido_tipos();
				setState(127);
				declaracion();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				match(T__3);
				setState(130);
				declaracion_contenido_const();
				setState(131);
				declaracion();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 4);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_contenido_constContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SL_GrammarParser.ID, 0); }
		public TerminalNode TK_ASIGNACION() { return getToken(SL_GrammarParser.TK_ASIGNACION, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Mas_declaraciones_constContext mas_declaraciones_const() {
			return getRuleContext(Mas_declaraciones_constContext.class,0);
		}
		public Declaracion_contenido_constContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_contenido_const; }
	}

	public final Declaracion_contenido_constContext declaracion_contenido_const() throws RecognitionException {
		Declaracion_contenido_constContext _localctx = new Declaracion_contenido_constContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracion_contenido_const);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(ID);
			setState(137);
			match(TK_ASIGNACION);
			setState(138);
			expresion();
			setState(139);
			mas_declaraciones_const();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_contenido_tiposContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SL_GrammarParser.ID, 0); }
		public TerminalNode TK_DOS_PUNTOS() { return getToken(SL_GrammarParser.TK_DOS_PUNTOS, 0); }
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public Mas_declaraciones_tiposContext mas_declaraciones_tipos() {
			return getRuleContext(Mas_declaraciones_tiposContext.class,0);
		}
		public Declaracion_contenido_tiposContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_contenido_tipos; }
	}

	public final Declaracion_contenido_tiposContext declaracion_contenido_tipos() throws RecognitionException {
		Declaracion_contenido_tiposContext _localctx = new Declaracion_contenido_tiposContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracion_contenido_tipos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(ID);
			setState(142);
			match(TK_DOS_PUNTOS);
			setState(143);
			tipo_dato();
			setState(144);
			mas_declaraciones_tipos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_contenido_varContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SL_GrammarParser.ID, 0); }
		public Otros_idContext otros_id() {
			return getRuleContext(Otros_idContext.class,0);
		}
		public TerminalNode TK_DOS_PUNTOS() { return getToken(SL_GrammarParser.TK_DOS_PUNTOS, 0); }
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public Mas_declaraciones_varContext mas_declaraciones_var() {
			return getRuleContext(Mas_declaraciones_varContext.class,0);
		}
		public Declaracion_contenido_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_contenido_var; }
	}

	public final Declaracion_contenido_varContext declaracion_contenido_var() throws RecognitionException {
		Declaracion_contenido_varContext _localctx = new Declaracion_contenido_varContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracion_contenido_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(ID);
			setState(147);
			otros_id();
			setState(148);
			match(TK_DOS_PUNTOS);
			setState(149);
			tipo_dato();
			setState(150);
			mas_declaraciones_var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SL_GrammarParser.ID, 0); }
		public Valor_auxContext valor_aux() {
			return getRuleContext(Valor_auxContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ValorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor; }
	}

	public final ValorContext valor() throws RecognitionException {
		ValorContext _localctx = new ValorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_valor);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				match(ID);
				setState(153);
				valor_aux();
				}
				break;
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case TK_NUMERO:
			case TK_CADENA:
			case TK_SUMA:
			case TK_RESTA:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Valor_auxContext extends ParserRuleContext {
		public Llamada_subrutinaContext llamada_subrutina() {
			return getRuleContext(Llamada_subrutinaContext.class,0);
		}
		public Id_arreglo_registroContext id_arreglo_registro() {
			return getRuleContext(Id_arreglo_registroContext.class,0);
		}
		public Valor_auxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor_aux; }
	}

	public final Valor_auxContext valor_aux() throws RecognitionException {
		Valor_auxContext _localctx = new Valor_auxContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_valor_aux);
		try {
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_PARENTESIS_IZQUIERDO:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				llamada_subrutina();
				}
				break;
			case TK_PUNTO:
			case TK_CORCHETE_IZQUIERDO:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				id_arreglo_registro();
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case T__14:
			case T__15:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case ID:
			case TK_SUMA:
			case TK_RESTA:
			case TK_COMA:
			case TK_PUNTO_Y_COMA:
			case TK_LLAVE_IZQUIERDA:
			case TK_LLAVE_DERECHA:
			case TK_CORCHETE_DERECHO:
			case TK_PARENTESIS_DERECHO:
			case TK_MODULO:
			case TK_MULTIPLICACION:
			case TK_POTENCIACION:
			case TK_DIVISION:
			case TK_IGUAL_QUE:
			case TK_MENOR:
			case TK_DISTINTO_DE:
			case TK_MENOR_IGUAL:
			case TK_MAYOR:
			case TK_MAYOR_IGUAL:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode TK_NUMERO() { return getToken(SL_GrammarParser.TK_NUMERO, 0); }
		public TerminalNode TK_CADENA() { return getToken(SL_GrammarParser.TK_CADENA, 0); }
		public SignoContext signo() {
			return getRuleContext(SignoContext.class,0);
		}
		public Variable_auxContext variable_aux() {
			return getRuleContext(Variable_auxContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variable);
		try {
			setState(171);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_NUMERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				match(TK_NUMERO);
				}
				break;
			case TK_CADENA:
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				match(TK_CADENA);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(164);
				match(T__4);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(165);
				match(T__5);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 5);
				{
				setState(166);
				match(T__6);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 6);
				{
				setState(167);
				match(T__7);
				}
				break;
			case TK_SUMA:
			case TK_RESTA:
				enterOuterAlt(_localctx, 7);
				{
				setState(168);
				signo();
				setState(169);
				variable_aux();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_auxContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SL_GrammarParser.ID, 0); }
		public TerminalNode TK_NUMERO() { return getToken(SL_GrammarParser.TK_NUMERO, 0); }
		public Variable_auxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_aux; }
	}

	public final Variable_auxContext variable_aux() throws RecognitionException {
		Variable_auxContext _localctx = new Variable_auxContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variable_aux);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==TK_NUMERO) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignoContext extends ParserRuleContext {
		public TerminalNode TK_SUMA() { return getToken(SL_GrammarParser.TK_SUMA, 0); }
		public TerminalNode TK_RESTA() { return getToken(SL_GrammarParser.TK_RESTA, 0); }
		public SignoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signo; }
	}

	public final SignoContext signo() throws RecognitionException {
		SignoContext _localctx = new SignoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_signo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_la = _input.LA(1);
			if ( !(_la==TK_SUMA || _la==TK_RESTA) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Otros_idContext extends ParserRuleContext {
		public TerminalNode TK_COMA() { return getToken(SL_GrammarParser.TK_COMA, 0); }
		public TerminalNode ID() { return getToken(SL_GrammarParser.ID, 0); }
		public Otros_idContext otros_id() {
			return getRuleContext(Otros_idContext.class,0);
		}
		public Otros_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otros_id; }
	}
